@@ -4,7 +4,7 @@
 \title{News for \R{} Package \pkg{Matrix}}
 \encoding{UTF-8}
 %% NB: The date (yyyy-mm-dd) is the "Packaged: " date in ../DESCRIPTION
-\section{Changes in version 1.7-0 (2024-02-08 r4577)}{
+\section{Changes in version 1.7-0 (2024-02-17 r4586)}{
   \subsection{Significant User-Visible Changes}{
     \itemize{
       \item The internal collection of SuiteSparse libraries is updated
@@ -43,6 +43,10 @@
     \itemize{
       \item CHOLMOD sources are patched to address the significant
       number of compiler warnings surfaced by \option{-Wall}.
+
+      \item The unary subscript \code{x[i]} is correct again for
+      \code{x} of class \code{.s[CT]Matrix} and logical \code{i}
+      indexing entries outside of the stored triangle.
     }
   }
   \subsection{Misc}{
